--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
     }
   ],
   "require": {
-    "php": ">=7.0.0",
-    "illuminate/support": "5.5.*|5.6.*",
-    "illuminate/database": "5.5.*|5.6.*"
+    "php": "~5.6|~7.0",
+    "illuminate/support": "~5.5",
+    "illuminate/database": "~5.5"
   },
   "require-dev": {
     "phpunit/phpunit": "~6.0",
